# RoboStriker-with-ROS2-and-Gazebo

./: README.md  ball_hitting_world
ball_hitting_robot/: .gitignore  ARCHITECTURE.md  COMPLETE.md  CONFIG.md  EXAMPLES.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  run.sh  setup.sh
ball_hitting_robot/scripts/: capture_demo.sh
ball_hitting_robot/src/control/: package.xml  setup.py
ball_hitting_robot/src/control/control/: __init__.py  ball_controller.py  ball_perceptor.py  demo_kick.py  fake_ball_publisher.py
ball_hitting_robot/src/control/launch/: sim.launch.py  start_full_simulation.launch.py
ball_hitting_robot/src/control/worlds/: my_hitting_arena.world
ball_hitting_robot/src/game_manager/: package.xml  setup.cfg  setup.py
ball_hitting_robot/src/game_manager/game_manager/: __init__.py  game_manager.py
ball_hitting_robot/src/gazebo_simulation/: CMakeLists.txt  package.xml
ball_hitting_robot/src/gazebo_simulation/launch/: full_system.launch.py  full_system_clean.launch.py  ros_only.launch.py  sim_robot.launch.py
ball_hitting_robot/src/gazebo_simulation/models/ball_hitting_robot/: model.config  model.sdf  model.sdf.bak.1778358629
ball_hitting_robot/src/gazebo_simulation/models/robot_gz/: model.sdf
ball_hitting_robot/src/gazebo_simulation/urdf/: robot.urdf
ball_hitting_robot/src/gazebo_simulation/worlds/: ball_world.sdf
ball_hitting_robot/src/perception/: package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control/lib/control/: ball_controller  demo_kick  (+2 more)
log/: latest_build
(+37 files in other folders)
